// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItemDetailed should render correctly with no data received 1`] = `
<div>
  <div
    class="content light"
  >
    <div>
      Name: 
    </div>
    <div>
      Diameter: 
    </div>
    <div>
      Gravity: 
    </div>
    <div>
      Population: 
    </div>
    <div>
      Climate: 
    </div>
    <div>
      Terrain: 
    </div>
    <div>
      Surfase water: 
    </div>
    <a
      href="/?search=&page=1"
      role="link"
    >
      Close
    </a>
  </div>
</div>
`;

exports[`ListItemDetailed should renders correct data 1`] = `
<div>
  <div
    class="content light"
  >
    <div>
      Name: 
      Mocked Planet
    </div>
    <div>
      Diameter: 
      10465
    </div>
    <div>
      Gravity: 
      1 standard
    </div>
    <div>
      Population: 
      200000
    </div>
    <div>
      Climate: 
      arid
    </div>
    <div>
      Terrain: 
      desert
    </div>
    <div>
      Surfase water: 
      1
    </div>
    <a
      href="/?search=&page=1"
      role="link"
    >
      Close
    </a>
  </div>
</div>
`;
